# WeChatCrawler

./: .gitignore  Crawler4.py  README.md  article_links.jsonl  extarct_url.py  keywords.py  llm.py  main.py  prompt.py  pyproject.toml  test.py  test2.py  utils.py  wechat_crawler.py  wechat_crawler2.py
website_crawler/: article_content.txt  article_data.json  scrapy.cfg
website_crawler/output/: no_title.md  no_title.txt
website_crawler/website_crawler/: items.py  piplines.py  settings.py
website_crawler/website_crawler/spiders/: full_site_spider.py
wechat_article/: _2025-07-04 17:43:11_5a8b5ceb-15f8-4b4a-88e8-a6da22461d30_article_content.md  _2025-07-04 17:43:11_5a8b5ceb-15f8-4b4a-88e8-a6da22461d30_article_data.json
