[project]
name = "financialrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=6.0.0",
    "requests>=2.32.4",
    "scrapy>=2.13.3",
    "selenium>=4.34.0",
    "webdriver-manager>=4.0.2",
    "jsonlines>=4.0.0",
    "openpyxl>=3.1.5",
    "playwright>=1.53.0",
]
